Update template for gapless_mp3_playback

--- a/templates/mpd.conf.erb
+++ b/templates/mpd.conf.erb
@@ -14,7 +14,7 @@ group                            "<%= @group %>"
 bind_to_address                  "<%= @bind_to_address %>"
 port                             "<%= @port %>"
 log_level                        "<%= @log_level %>"
-gapless_mp                       "<%= @gapless_mp %>"
+gapless_mp3_playback             "<%= @gapless_mp3_playback %>"
 save_absolute_paths_in_playlists "<%= @save_absolute_paths_in_playlists %>"
 metadata_to_use                  "<%= @metadata_to_use %>"
 auto_update                      "<%= @auto_update %>"
