Added id3v1_encoding correction

--- a/templates/mpd.conf.erb
+++ b/templates/mpd.conf.erb
@@ -81,7 +81,7 @@ max_output_buffer_size "<%= @max_output_buffer_size %>"
 
 # Character Encoding ##########################################################
 filesystem_charset "<%= @filesystem_charset %>"
-id                 "<%= @id %>"
+id3v1_encoding     "<%= @id3v1_encoding %>"
 ###############################################################################
 
 # SIDPlay decoder #############################################################
