Starting mpd using binary

--- a/templates/mpd.conf.erb
+++ b/templates/mpd.conf.erb
@@ -49,11 +49,11 @@ input {
 audio_output {
 	type		"alsa"
 	name		"My ALSA Device"
-	device		"hw:0,0"	# optional
-	format		"44100:16:2"	# optional
-	mixer_device	"default"	# optional
-	mixer_control	"PCM"		# optional
-	mixer_index	"0"		# optional
+	device		"hw:0,0"
+	format		"44100:16:2"
+	mixer_device	"default"
+	mixer_control	"PCM"
+	mixer_index	"0"
 }
 ###############################################################################
 
